--- a/app/views/lcms/engine/admin/batch_reimports/_search_form.html.erb
+++ b/app/views/lcms/engine/admin/batch_reimports/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for :query, url: :admin_batch_reimport, html: { class: 'form-inline well o-admin-lessons-search', method: :post } do |f| %>
+<%= simple_form_for :query, url: lcms_engine.admin_batch_reimport_path, html: { class: 'form-inline well o-admin-lessons-search', method: :post } do |f| %>
 
   <div class="row align-bottom align-justify">
     <button class="button o-admin-search-subject float-right" type="button" data-toggle="subject">Select Subject</button>
