--- a/app/views/lcms/engine/admin/standards/_form.html.erb
+++ b/app/views/lcms/engine/admin/standards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @standard, as: :standard, url: admin_standard_path(@standard), html: { class: 'o-standard-form' } do |f| %>
+<%= simple_form_for @standard, as: :standard, url: lcms_engine.admin_standard_path(@standard), html: { class: 'o-standard-form' } do |f| %>
 
   <div class="row o-admin-standard-readonly">
     <label>Name: </label>
