--- a/app/views/lcms/engine/admin/users/_search_form.html.erb
+++ b/app/views/lcms/engine/admin/users/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for :query, url: :admin_users, html: { class: 'form-inline well o-admin-users-search', method: :get } do |f| %>
+<%= simple_form_for :query, url: lcms_engine.admin_users_path, html: { class: 'form-inline well o-admin-users-search', method: :get } do |f| %>
 
   <div class='row align-bottom align-justify'>
     <%= f.input :email, label: false, required: false, placeholder: 'Search by E-mail', wrapper_html: { class: 'o-admin-search-term' } %>
