--- a/app/views/lcms/engine/admin/access_codes/_form.html.erb
+++ b/app/views/lcms/engine/admin/access_codes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [:admin, @access_code], html: { id: 'access_code_form' } do |f| %>
+<%= simple_form_for @access_code, url: @url.presence || lcms_engine.admin_access_codes_path, html: { id: 'access_code_form' } do |f| %>
   <%= f.input :code %>
   <%= f.input :active %>
   <%= f.button :submit, t('ui.save'), name: nil %>
