--- a/app/views/lcms/engine/admin/documents/_search_form.html.erb
+++ b/app/views/lcms/engine/admin/documents/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for :query, url: :admin_documents, html: { class: 'form-inline well o-admin-lessons-search', method: :get } do |f| %>
+<%= simple_form_for :query, url: lcms_engine.admin_documents_path, html: { class: 'form-inline well o-admin-lessons-search', method: :get } do |f| %>
 
   <div class='row align-bottom align-justify'>
     <button class="button o-admin-search-subject float-right" type="button" data-toggle="lesson-subject">Select Subject</button>
