--- a/app/views/lcms/engine/admin/resources/_search_form.html.erb
+++ b/app/views/lcms/engine/admin/resources/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @query, url: :admin_resources, html: { class: 'form-inline well admin-resource-search', method: :get } do |f| %>
+<%= simple_form_for @query, url: lcms_engine.admin_resources_path, html: { class: 'form-inline well admin-resource-search', method: :get } do |f| %>
 
   <div class='row align-justify'>
     <%= f.input :grades, as: :select, collection: Lcms::Engine::Grades.grades, input_html: { class: 'selectize resource-search-select', multiple: true }, label: t('.grades'), label_method: :humanize, required: false, wrapper_html: { class: 'resource-search-wrap' } %>
