--- a/app/views/lcms/engine/admin/users/index.html.erb
+++ b/app/views/lcms/engine/admin/users/index.html.erb
@@ -7,7 +7,7 @@
 
   <div class="row">
     <div class="flex-pull-right">
-      <%= link_to t('.new_user'), :new_admin_user, class: 'button success' %>
+      <%= link_to t('.new_user'), lcms_engine.new_admin_user_path, class: 'button success' %>
     </div>
     <table class="table">
       <tr>
@@ -27,17 +27,17 @@
       <% @users.each do |user| %>
         <% cache user do %>
           <tr id="user_<%= user.id %>">
-            <td><%= link_to user.id, edit_admin_user_path(user) %>
-            <td><%= link_to user.survey&.fetch('first_name', nil) || user.name, edit_admin_user_path(user) %>
+            <td><%= link_to user.id, lcms_engine.edit_admin_user_path(user) %>
+            <td><%= link_to user.survey&.fetch('first_name', nil) || user.name, lcms_engine.edit_admin_user_path(user) %>
             <td><%= raw user.survey&.fetch('last_name', nil) %>
             <td><%= user.email %>
             <td><%= user.role %>
             <td><%= user.access_code.presence || '-' %>
             <td><%= user.confirmed? ? 'YES' : 'NO' %>
             <td class="u-txt--small"><%= user.created_at.to_s %>
-            <td><%= link_to content_tag(:i, nil, class: 'fas fa-pencil-alt').html_safe, edit_admin_user_path(user), class: 'button small primary' %>
-            <td><%= button_to t('.reset_password_btn'), reset_password_admin_user_path(user), class: 'button small', data: { confirm: t('ui.are_you_sure') }, form_class: 'inline', method: :post %>
-            <td><%= button_to t('ui.delete'), admin_user_path(user), class: 'button small alert', data: { confirm: t('ui.are_you_sure') }, form_class: 'inline', method: :delete %></td>
+            <td><%= link_to content_tag(:i, nil, class: 'fas fa-pencil-alt').html_safe, lcms_engine.edit_admin_user_path(user), class: 'button small primary' %>
+            <td><%= button_to t('.reset_password_btn'), lcms_engine.reset_password_admin_user_path(user), class: 'button small', data: { confirm: t('ui.are_you_sure') }, form_class: 'inline', method: :post %>
+            <td><%= button_to t('ui.delete'), lcms_engine.admin_user_path(user), class: 'button small alert', data: { confirm: t('ui.are_you_sure') }, form_class: 'inline', method: :delete %></td>
           </tr>
         <% end %>
       <% end %>
