--- a/app/views/layouts/lcms/engine/application.html.erb
+++ b/app/views/layouts/lcms/engine/application.html.erb
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>document.querySelector('html').className = 'js';</script>
     <%= csrf_meta_tags %>
-    <link rel="stylesheet" href="/lcms-engine-assets/application.css"/>
-    <script type="text/javascript" src="/lcms-engine-assets/application.js" defer></script>
+    <link rel="stylesheet" href="/lcms-engine-assets/application.css" data-turbo-track="reload"/>
+    <script type="text/javascript" src="/lcms-engine-assets/application.js" data-turbo-track="reload" defer></script>
   </head>
   <body>
     <%= render partial: 'lcms/engine/shared/header' %>
     <%= render partial: 'lcms/engine/shared/flash' %>
-    <%= yield %>
+    <div class="container-fluid">
+      <%= yield %>
+    </div>
     <%#= render partial: 'lcms/engine/shared/footer' %>
   </body>
 </html>
